added first blog

--- a/blog/a-1.md
+++ b/blog/a-1.md
@@ -1,6 +1,6 @@
 # Substrate Blockchains, e.g. Polkadot Can Dance As Cloud-Native
 
-At first, it was a plain hypothesis. Then we noticed a Docker image in Dockerhub and a Dockerfile in the Polkadot repository. To quickly dispel any doubts to our suspicion, we pulled the image as described in [Poladot's online documentation and tried to run it the Docker way](https://wiki.polkadot.network/docs/en/maintain-sync) or [at paritech's repo](https://github.com/paritytech/polkadot/blob/master/doc/docker.md).
+At first, it was a plain hypothesis. Then we noticed a Docker image in Dockerhub and a Dockerfile in the Polkadot repository. To quickly dispel any doubts to our suspicion, we pulled the image as described in [Polkadot's online documentation and tried to run it the Docker way](https://wiki.polkadot.network/docs/en/maintain-sync) or [at paritech's repo](https://github.com/paritytech/polkadot/blob/master/doc/docker.md).
 
 ```bash
   docker run --rm -it parity/polkadot:latest --version
@@ -12,7 +12,7 @@ or
 
 The result was promising for it ran as expected!  So we reckon, it could run and execute in a compute node configured as a kubernetes worker in the Openshift Platform. Again, in the interest of speed, we chose to try running it in our resource-rich laptop, by simply spinning up a single node master and worker cluster using the Openshift Code Reader Container, via ```crc start```.
 
-As a side note though, unfortunately, we have observed that Polkadot was not designed to run as a Microservice, but rather as a monolith. We say this because of the in-built nosql RocksDB and Prometheus that seems to be tightly integrated into it during the deployment. It may be a cause for a potential automation issue later, but it remains to be seen as of this time. An initial huddle caused a debate on whether the Polkadot could be spun-up in Openshift's Kubernetes as a stateless or stateful container. It was argued that if Polkadot is configured as a Kubernetes statefulset deployment, then configuring for a no-downtime high-availability could be a challenge. So we thought and concur, to first attempt to run it as a stateless deployment, in spite of its size (in the range of 176Mb up to 270MB), and see from there where it goes. 
+As a side note though, unfortunately, we have observed that Polkadot was not designed to run as a Microservice, but rather as a monolith. We say this because of the in-built nosql RocksDB and Prometheus that seems to be tightly integrated into it as a single package in a deployment. It may be a cause for potential automation issues later, but it remains to be seen as of this time. An initial team huddle caused a debate on whether the Polkadot could be spun-up in Openshift's Kubernetes as a stateless or stateful container. It was argued that if Polkadot is configured as a Kubernetes statefulset deployment, then configuring for a no-downtime high-availability could be a challenge. So we thought and concur, to first attempt to run it as a stateless deployment, in spite of its size (in the range of 176Mb up to 270MB), and see from there where it goes. 
 
 Using a kubernetes deployment.yml manifest like below, you can already savour and appreciate the blend, by simply invoking ``` kubectl apply ```. This initial sip or dip could make or break our experiment.
 
