added first blog

--- a/blog/a-1.md
+++ b/blog/a-1.md
@@ -52,7 +52,7 @@ spec:
       securityContext:
         runAsUser: 0          
 ```
-This Kubernetes manifest could be executed using the command like below with the assumption that you have Minikube, Minishift or Openshift crc installed in your laptop with sufficient resources. And have successfuly configured a persistent volume claim, whose manifest looks like below.
+This Kubernetes deployment manifest could be executed using the command like below with the assumption that you have Minikube, Minishift or Openshift crc installed in your laptop with sufficient resources. And have successfuly configured a persistent volume claim, whose manifest looks like below.
 ```yaml
 apiVersion: v1
 kind: PersistentVolumeClaim
